# yolo11-seg-logo

./: .env.example  .gitignore  Dockerfile  README.md  convert2yolo.py  folder2folder.py  main.py  predict.py  pyproject.toml  requirements.txt
deploy_space/: app.py  requirements.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DATA_PREP.md  GRADIO_API.md
legacy/: app.py  train.py
src/logo_seg/: config.py
src/logo_seg/app/: interface.py
src/logo_seg/data/: converter.py  preprocessor.py
src/logo_seg/models/: predictor.py  trainer.py
src/logo_seg/utils/: logger.py
